@startuml

title __SRC's Class Diagram__\n

  package  {
    class Car {
        - model : String
        - make : String
        - type : String
        - Regno : String
        - year : int
        - cost : double
        + Car()
        + Car()
        + toString()
        + getModel()
        + setModel()
        + getMake()
        + setMake()
        + getType()
        + setType()
        + getYear()
        + setYear()
        + getRegno()
        + setRegno()
        + getCost()
        + setCost()
    }
  }
  

  package  {
    class CarSystem {

        - cars : ArrayList<Car>
        - Fuelcars : ArrayList<FuelCar>
        - ElectricCars : ArrayList<ElectricCar>
        - customers : ArrayList<Customer>
        - sellers : ArrayList<Seller>
        - fuelType : String
        ~ motor : String
        ~ battery : int
        ~ emissions : int
        ~ engine : double
        ~ make : String
        ~ year : int
        ~ model : String
        ~ type : String
        ~ transmission : String
        ~ fueltype : String
        ~ cost : double
        ~ regno : String
        ~ r : String
        + CarSystem()
        + addCustomer()
        + addCarSale()
        - choseFuel()
        - choseElectric()
        + displayCarDetails()
        + displayElectricDetails()
        + displayFuelDetails()
        + getMotor()
        + getBattery()
        + getEmissions()
        + getEngine()
        + getMake()
        + getModel()
        + getRegno()
        + getCost()
        + getYear()
        + addCar()
        - validateString()
        + resetButton()
        + viewCars()
        + search()
        + viewDetails()
        + deleteCust()
        + actionPerformed()
    }
  }


  package  {
    class CarSystemDriver {
        {static} + main()
    }
  }
  

  package  {
    class Customer {
        - name : String
        - DOB : String
        - email : String
        + toString()
        + Customer()
        + Customer()
        + getName()
        + setName()
        + getDOB()
        + setDOB()
        + getEmail()
        + setEmail()
    }
  }
  

  package  {
    class ElectricCar {
        - batterySize : int
        - motor : String
        + toString()
        + ElectricCar()
        + getBatterySize()
        + setBatterySize()
        + getMotor()
        + setMotor()
    }
  }
  

  package  {
    class FuelCar {
        - emissions : int
        - transmission : String
        - fuel : String
        - engineSize : double
        + toString()
        + FuelCar()
        + getEngineSize()
        + setEngineSize()
        + getEmissions()
        + setEmissions()
        + getTransmission()
        + setTransmission()
        + getFuel()
        + setFuel()
    }
  }
  

  package  {
    class Login {
        - user : String
        - pass : String
        ~ defaultSound : URL
        {static} + clip : Clip
        {static} + audioInputStream : AudioInputStream
        + Login()
        + play()
        + stop()
        + actionPerformed()
    }
  }
  


  package  {
    class Seller {
        - phone : String
        - sellerType : String
        + toString()
        + Seller()
        + getSellertype()
        + setSellertype()
        + getPhone()
        + setPhone()
    }
  }
  


  CarSystem o-- Car : car
  CarSystem o-- FuelCar : Fuelcar
  CarSystem o-- ElectricCar : Electriccar
  CarSystem o-- Customer : customer
  CarSystem o-- Seller : seller
  ElectricCar -up-|> Car
  FuelCar -up-|> Car
  Seller -up-|> Customer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
